fixed z-index

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,11 @@
   --check-gray: #fff;
 }
 
+.position {
+  position: relative;
+  z-index: 10000;
+}
+
 *,
 html,
 body {
@@ -65,6 +70,8 @@ ul {
 .content {
   width: 80%;
   margin: auto;
+  position: relative;
+  z-index: 100;
 }
 
 .section {
@@ -76,7 +83,7 @@ ul {
   padding-top: 8em;
   padding-bottom: 8em;
   overflow-y: hidden;
-  z-index: 0;
+  z-index: -30;
 }
 
 .animation-container {
@@ -88,7 +95,7 @@ ul {
 
 .animation-image {
   position: absolute;
-  z-index: 500;
+  z-index: 0;
 }
 
 .text {
@@ -150,7 +157,7 @@ ul {
   background-size: cover;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  z-index: -11;
+  z-index: 11;
 }
 
 .tdlogo {
@@ -158,7 +165,12 @@ ul {
   width: 100%;
   overflow: hidden;
   position: fixed;
-  z-index: 1;
+  z-index: 10000;
+  transition: all 0.3s;
+}
+
+.opacity {
+  opacity: 0.1;
 }
 
 .nav-links {
@@ -180,7 +192,7 @@ ul {
   padding-left: 90px;
   padding-right: 90px;
   justify-content: space-between;
-  z-index: 10;
+  z-index: 1500000;
   box-sizing: border-box;
   font-family: "Oswald", sans-serif;
 }
